# aio-readiness-checker

./: .gitignore  aio_demo_app.py  analyzer.py  config.py  extractor.py  main.py  pdf_generator.py  pyproject.toml  scorer.py
